--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,3 @@
-body, html {
-  height: 100%;
-  margin: 0; 
-  padding: 0;
-  background-color: #FA7921;
-}
 
 #bg-video {
     position: fixed;
@@ -13,4 +7,43 @@ body, html {
     min-height: 100%;
     z-index: -1;
     object-fit: cover;
+}
+
+* {
+    padding: 0%;
+    margin:0%;
+    box-sizing: border-box;
+    font-family: 'Times New Roman', Times, serif;
+}
+
+.hero {
+    height: 100vh;
+    background-image: linear-gradient(rgba(0,0,0,0.5)),
+    rgba (0,0,0,0.5), url();
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    color: orange;
+}
+
+h1 {
+    font-size: 4rem;
+    font-weight: 500;
+    margin-bottom: 20px;
+}
+
+.timebox {
+    display: flex;
+    gap: 90px;
+}
+.time {
+    text-align: center;
+}
+
+.time h2 {
+    font-size: 5rem;
+    font-weight: 100;
 }
