--- a/CSS/Register.css
+++ b/CSS/Register.css
@@ -9,31 +9,40 @@ html {
     text-align: center;
 }
 
+.wrapper {
+    position: relative;
+    width: 400px;
+    height: 440px;
+    background: transparent;
+    border: 2px solid rgba(255, 255, 255, .5);
+    border-radius: 20px;
+    backdrop-filter: blur(10px);
+    box-shadow: 0 0 30px rgba(0, 0, 0, .5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.wrapper .form {
+    width: 100%;
+    padding: 40px;
+}
+
+.form h1 {
+    font-size: 2em;
+    color: orange;
+    text-align: center;
+}
+
 body {
     min-height: 100vh;
     background-image: url(/Images/HalloweenBackground2.jpg);
     background-size: cover;
-    background-position: right;
+    background-position: center;
     overflow: hidden;
 }
 
-form {
-    width: min(400px,  100%);
-    margin-top: 20px;
-    margin-bottom: 50px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 10px;
-}
-
-form > div {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-}
-
-form label {
+.form label {
     flex-shrink: 0;
     height: 50px;
     width: 50px;
@@ -47,21 +56,79 @@ form label {
     font-weight: 500;
 }
 
-form input {
-    box-sizing: border-box;
-    flex-grow: 1;
-    min-width: 0;
-    height: 50px;
-    padding: 1em;
-    font: inherit;
-    border-radius: 0 10px 10px 0;
+.form .input {
+ position: relative;
+ width: 100%;
+ height: 50px;
+ border-bottom: 2px solid orange;
+ margin: 30px 0;
 }
 
+.input label {
+    position: absolute;
+    top: 50%;
+    left: 5px;
+    transform: translateY(-50%);
+    font-size: 1em;
+    color: orange;
+    font-weight: 500;
+    pointer-events: none;
+}
 
+.input .icon {
+    position: absolute;
+    left: 8px;
+}
+
+.form .input:hover {
+    border-color: white;
+}
+
+.form .input:focus {
+    outline: none;
+    border-color: #dbdbdb;
+}
+
+div:has(input:focus) > label {
+    background-color: white;
+}
+
+.form input::placeholder {
+    color:#e2711d;
+}
+
+.form button {
+    margin-top: 10px;
+    border: none;
+    border-radius: 1000px;
+    padding: .85em 4em;
+    color: white;
+    font-weight: 600;
+    text-transform: uppercase;
+    cursor: pointer;
+    transition: 150ms ease;
+}
+
+.form button:hover {
+    background-color: #dc2f02;
+}
+.form button:focus {
+    outline: none;
+    background-color: white;
+}
+
+a {
+    text-decoration: none;
+    color: #dc2f02;
+}
+
+a:hover {
+    text-decoration: underline;
+}
 
 /* Navbar */
 .navbar {
-background-color: #e2711d;
+  background-color: #e2711d;
   padding: 1rem 2rem;
   display: flex;
   align-items: center;
@@ -91,7 +158,7 @@ header ul li:last-child {
 
 header ul li a {
     text-decoration: none;
-    color: #caf0f8;
+    color: orange;
     padding: 22px 0;
     display: inline-block;
     transition: all ease 0.3s;
@@ -100,4 +167,19 @@ header ul li a {
 
 header ul li a:hover {
     color: #dc2f02;
+}
+
+header ul li a:hover::after {
+    transform: scaleX(1);
+}
+
+@media(max-width: 1100px){
+    .wrapper {
+        width: min(600px, 100%);
+        border-radius: 0;
+    }
+}
+
+#error-message {
+    color: red;
 }
