--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    color: #ff9505;
+    color: #ff7b00 ;
 }
 
 h1 {
